--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1278,3 +1278,10 @@ keywords = "Featherweight Java, Trait, Type system"
   year={1991},
   publisher={Elsevier}
 }
+
+@inproceedings{wadler1989theorems,
+  title={Theorems for Free!},
+  author={Wadler, Philip},
+  booktitle={Proceedings of the 4th International Conference on Functional Programming Languages and Computer Architecture},
+  year={1989},
+}
