--- a/Sources/Coherence/coherence_simple.tex
+++ b/Sources/Coherence/coherence_simple.tex
@@ -5,13 +5,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 This chapter constructs a logical relation to
-establish the coherence of \namee. Finding a
+establish coherence of \namee. Finding a
 suitable definition of coherence for \namee is already challenging in its own
 right. In what follows we reproduce the steps of finding a definition for coherence
 that is both intuitive and applicable. Then we present the
 construction of the logical (equivalence) relation tailored to this
 definition, and the connection between logical equivalence and coherence.
-\Cref{chap:coherence:poly} builds on the idea in this chapter to prove coherence of
+\Cref{chap:coherence:poly} builds on the idea in this chapter to prove coherence for
 \fnamee.
 
 
@@ -32,7 +32,7 @@ contribution to the \textit{outcome} of a computation~\cite{Harper_2016}.
 Drawing inspiration from a wide range of literature on contextual
 equivalence~\cite{morris1969lambda}, we want a context-based notion of
 coherence. It is helpful to consider several examples before presenting the
-formal definition of our new semantically founded notion of coherence.
+formal definition of our new semantically-founded notion of coherence.
 
 \begin{example} \label{eg:1}
 The same \namee expression $3$ can be typed $[[nat]]$ in many ways: for instance, by \rref{T-lit}; by
@@ -79,13 +79,11 @@ the notion of \textit{contextual equivalence}.
   $\kleq{[[e]]}{[[e']]}$, if there exists $i$ such that $[[e -->> ii]]$ and $[[e' -->> ii]]$.
 \end{definition}
 
-\begin{definition}[\tname Contextual Equivalence] \label{def:cxtx} \leavevmode
-  \begin{center}
-  \begin{tabular}{lll}
-    $[[gg |- e1 ~= e2 : T]] $ & $\defeq $ & $[[gg |- e1 : T]] \land [[gg |- e2 : T]] \ \land $ \\
-                                 & & $\forall [[cc]].\ [[cc : (gg |- T) ~~> (empty |- nat)]]  \Longrightarrow \kleq{[[cc{e1}]]}{[[cc{e2}]]}  $
-  \end{tabular}
-  \end{center}
+\begin{definition}[\tname Contextual Equivalence] \label{def:cxtx}
+  \begin{align*}
+    [[gg |- e1 ~= e2 : T]]  & \defeq [[gg |- e1 : T]] \land [[gg |- e2 : T]] \ \land \\
+                                 & \qquad \forall [[cc]].\ [[cc : (gg |- T) ~~> (empty |- nat)]]  \Longrightarrow \kleq{[[cc{e1}]]}{[[cc{e2}]]}
+  \end{align*}
 \end{definition}
 
 Regarding \cref{eg:1}, it seems adequate to say that $3$ and
@@ -98,9 +96,9 @@ demonstrated by the following example.
   $[[\x . pp1 x]]$ and $[[\x . pp2 x]]$ should also be considered equal. To see
   why, first note that they are both the translations of the same \namee expression:
   $[[(\x . x) : nat & nat -> nat]]$. What can we do with this lambda
-  abstraction? We can apply it to $1 : [[nat & nat]]$ for example. In that case,
-  we get two translations $\app{[[(\x . pp1 x)]]}{\pair{1}{1}}$ and $\app{[[(\x . pp2 x)]]}{\pair{1}{1}}$,
-  which both reduce to the same numeral $1$. However, $[[\x . pp1 x]]$ and $[[\x . pp2 x]]$
+  abstraction? We can apply it to $1 : [[nat & nat]]$ for example, which leads to
+  two translations $\app{[[(\x . pp1 x)]]}{\pair{1}{1}}$ and $\app{[[(\x . pp2 x)]]}{\pair{1}{1}}$.
+  It is obvious that both reduce to the same numeral $1$. However, $[[\x . pp1 x]]$ and $[[\x . pp2 x]]$
   are definitely not equal according to \cref{def:cxtx}, as one can find a
   context $\app{[[__]]}{\pair{1}{2}}$ where the two terms reduce to two
   different numerals.
@@ -147,13 +145,12 @@ consideration both \namee and \tname contexts.
 
 
 
-\begin{definition}[\namee Contextual Equivalence] \label{def:cxtx2} \leavevmode
-  \begin{center}
-  \begin{tabular}{lll}
-    $[[GG |- ee1 ~= ee2 : A]] $ & $\defeq $ & $\forall [[e1]], [[e2]], [[C]], [[cc]].\  [[GG |- ee1 => A ~~> e1]] \land [[GG |- ee2 => A ~~> e2]] \ \land $ \\
-                                 & & $[[CC : (GG => A) ~> (empty => nat) ~~> cc]]  \Longrightarrow \kleq{[[cc{e1}]]}{[[cc{e2}]]}  $
-  \end{tabular}
-  \end{center}
+\begin{definition}[\namee Contextual Equivalence] \label{def:cxtx2}
+  \begin{align*}
+    [[GG |- ee1 ~= ee2 : A]]  & \defeq \forall [[e1]], [[e2]].\  [[GG |- ee1 => A ~~> e1]] \land [[GG |- ee2 => A ~~> e2]] \ \land \\
+                                & \qquad \forall [[C]], [[cc]]. \ [[CC : (GG => A) ~> (empty => nat) ~~> cc]]   \\
+                                & \qquad \Longrightarrow \kleq{[[cc{e1}]]}{[[cc{e2}]]}
+  \end{align*}
 \end{definition}
 
 
@@ -342,13 +339,11 @@ give the semantic interpretation of typing contexts:
 
 Two open terms are related if every pair of related closing substitutions
 makes them related:
-\begin{definition}[Logical equivalence] \leavevmode
-  \begin{center}
-  \begin{tabular}{lll}
-    $[[GG |- e1 == e2 : A ; B]] $ & $\defeq $ & $[[|GG| |- e1 : |A|]] \land [[|GG| |- e2 : | B | ]] \ \land $ \\
-                                 & & $\forall [[g1]], [[g2]] .\, [[(g1, g2) in GG ]] \Longrightarrow [[(g1 (e1), g2 (e2))  in E (A ; B) ]]$
-  \end{tabular}
-  \end{center}
+\begin{definition}[Logical equivalence]
+  \begin{align*}
+    [[GG |- e1 == e2 : A ; B]] & \defeq [[|GG| |- e1 : |A|]] \land [[|GG| |- e2 : | B | ]] \ \land \\
+                                 & \qquad \forall [[g1]], [[g2]] .\, [[(g1, g2) in GG ]] \Longrightarrow [[(g1 (e1), g2 (e2))  in E (A ; B) ]]
+  \end{align*}
 \end{definition}
 For succinctness, we write $[[GG |- e1 == e2 : A]]$ to mean $[[GG |- e1 == e2 : A ; A]]$.
 
